# rust-price-monitor

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  commands.rs  db.rs  main.rs  scheduler.rs  scraper.rs  web.rs
static/: index.html
static/css/: style.css
static/js/: app.js
