[package]
name = "rust-price-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"